[package]
name = "caith"
version = "4.2.4"
authors = ["Geobert Quach <geobert@protonmail.com>"]
edition = "2021"
description = "A dice roller library supporting many features"
keywords = ["dice", "roll", "RPG", "roll", "random"]
categories = ["game-development", "games"]
repository = "https://github.com/Geobert/caith"
license = "MIT"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.8"
pest_derive = "2.8"
rand = "0.10"

[dev-dependencies]
rand_core = "0.10"

[features]
default = []
ova = []
cde = []
cards = []
